Change SSH key and update deployment commands
Updated SSH key secret and modified deployment script to use Docker.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ec2-user
-        key: ${{ secrets.EC2_SSH_KEY }}
+        key: ${{ secrets.EC2_KEY }}
         port: 22
         script: |
           cd /home/ec2-user/app
           git pull origin main
-          pkill -f "python main.py" || true
-          python main.py 
+          docker-compose down
+          docker-compose up -d --build
