--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,29 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Deploy to EC2 via SSH
-      uses: appleboy/ssh-action@v0.1.8
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ec2-user
-        key: ${{ secrets.EC2_KEY }}
-        port: 22
-        script: |
-          bash -c '
-            cd /home/ec2-user/app
-            git pull origin main
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ec2-user
+          key: ${{ secrets.EC2_KEY }}
+          port: 22
+          script: |
+            bash -c '
+              cd /home/ec2-user/app
+              git pull origin main
 
-            cd /home/ec2-user/app/app
-            docker stop py-app || true
-            docker rm py-app || true
-            
-            timestamp=$(date +%Y%m%d%H%M%S)
-            docker build -t python-flask-app:latest -t python-flask-app:$timestamp . --no-cache
+              cd /home/ec2-user/app/app
+              docker stop py-app || true
+              docker rm py-app || true
+              
+              docker build -t python-flask-app:latest . --no-cache
 
-            docker image prune -f
-
-            docker run -d --restart always --env-file .env -p 3000:3000 --name py-app python-flask-app
-          '
+              docker run -d --restart always --env-file .env -p 3000:3000 --name py-app python-flask-app
+            '
