Agregar sudo al comando git pull en el script de despliegue para evitar problemas de permisos

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           script: |
             bash -c '
               cd /home/ec2-user/app
-              git pull origin main
+              sudo git pull origin main
 
               cd /home/ec2-user/app/app
               docker stop py-app || true
